# ML_pipeline

./: .gitignore  Develop_model.ipynb  Exploratory_data_analysis.ipynb  README.md  bodyfat-new-features.db  bodyfat.db  dvc.yaml  log.txt  model.pkl  params.yaml  pyproject.toml
.dvc/: config
artifacts/models/: .gitignore  model.json  model.json.dvc  preprocessor.joblib.dvc
bodyfat/: __init__.py  app.py  config.py  index.html
bodyfat/data/: __init__.py  dataset.py  dataset_builder.py
bodyfat/features/: __init__.py  features_builder.py
bodyfat/models/: __init__.py  trainer.py
experiments/: metrics.json
experiments/plots/metrics/train/: r2.tsv  rmse.tsv
experiments/plots/metrics/val/: r2.tsv  rmse.tsv
